--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -31,8 +31,8 @@ jobs:
           registry: docker.io
       - name: Build and Push Docker images
         run: |
-          export GOPATH=${GITHUB_WORKSPACE}/go
-          export PATH=$PATH:$GOPATH/bin
+#          export GOPATH=${GITHUB_WORKSPACE}/go
+#          export PATH=$PATH:$GOPATH/bin
           export IMAGE_TAG=latest
           make image-multiarch
         working-directory: ${{ github.workspace }}/go/src/github.com/${{ github.repository }}
